# Analyzing-Cleanaway-Services

./: .gitignore  README.md  main.py  pyproject.toml  readme.md  requirements.txt  setup.py  template.py
.github/workflows/: actions.yaml
01_WEBSCRAPING/: cleanaway_services_raw_data.csv  cleanaway_services_scraper.py  fx_cleanaway_services_scraper_template.py
conf/: configs.yaml
data/processed/: cleanaway_services.csv  products.csv
notebooks/: 01_data_ingestion.ipynb  01_web_scraping_tests.ipynb  02_data_exploration.ipynb  02_data_transformation.ipynb
reports/: Cleanaway Services - Australia Report.md
src/: constants.py  exception.py  logger.py
src/components/: data_processor.py  data_scraper.py  link_extractor.py
src/pipelines/: stage_01_data_extraction.py  stage_02_data_processing.py  stage_02_data_transformation.py
src/utils/: analysis_utils.py  basic_utils.py
